--- a/webpages/register.html
+++ b/webpages/register.html
@@ -59,7 +59,7 @@
                         <div class="row">
                             <div class="col-sm-12 form-group" ng-class="{'has-error': (registrationForm.username.$invalid && registrationForm.username.$touched) ,
                                                                          'has-success': (registrationForm.username.$valid && registrationForm.username.$touched)}">
-                                <label class="control-label">Username</label>
+                                <label class="control-label">Username<red-asterisk></red-asterisk></label>
                                 <p class="form-text text-muted">Alpha-numeric characters, at least 5 characters long.</p>
                                 <div ng-messages="registrationForm.username.$error" style="color:maroon" role="alert" ng-hide="registrationForm.username.$untouched">
                                     <div class="alert alert-danger" role="alert" ng-message="required">
@@ -92,7 +92,7 @@
                         <div class="row">
                             <div class="col-sm-12 form-group" ng-class="{'has-error': (registrationForm.password.$invalid && registrationForm.password.$touched) ,
                                                                          'has-success': (registrationForm.password.$valid && registrationForm.password.$touched)}">
-                                <label class="control-label">Password</label>
+                                <label class="control-label">Password<red-asterisk></red-asterisk></label>
                                 <p class="form-text text-muted">At least 10 characters long.</p>
                                 <div ng-messages="registrationForm.password.$error" style="color:maroon" role="alert" ng-hide="registrationForm.password.$untouched">
                                     <div class="alert alert-danger" role="alert" ng-message="required">
@@ -120,7 +120,7 @@
                         <div class="row">
                             <div class="col-sm-12 form-group" ng-class="{'has-error': register.confirmPassword != register.password && registrationForm.confirmpass.$touched,
                                                                          'has-success': register.confirmPassword === register.password && registrationForm.confirmpass.$touched}">
-                                <label class="control-label">Confirm Password</label>
+                                <label class="control-label">Confirm Password<red-asterisk></red-asterisk></label>
                                 <div ng-messages="registrationForm.confirmpass.$error" style="color:maroon" role="alert" ng-hide="registrationForm.confirmpass.$untouched">
                                     <div class="alert alert-danger" role="alert" ng-message="required">
                                         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
@@ -148,8 +148,15 @@
                         <!-- Demographic Info -->
                         <div class="row">
                             <div class="col-sm-6 form-group">
-                                <label>First Name</label>
-                                <input type="text" placeholder="Enter First Name Here..." class="form-control" ng-model="register.firstName" required>
+                                <label class="control-label">First Name<red-asterisk></red-asterisk></label>
+                                <p class="form-text text-muted">We need this for paperwork. Use a real name.</p>
+                                <input type="text" 
+                                    placeholder="Enter First Name Here..." 
+                                    class="form-control" 
+                                    ng-model="register.firstName" 
+                                    required
+                                    name="firstname"
+                                >
                             </div>
                             <div class="col-sm-6 form-group">
                                 <label>Last Name</label>
