Working on shop homepage, carousel still broke

--- a/webpages/about.html
+++ b/webpages/about.html
@@ -25,6 +25,7 @@
     <script type="text/javascript" src="/js/aboutApp.js"></script>
     <script type="text/javascript" src="/js/headerController.js"></script>
     <script type="text/javascript" src="/js/looseTemplates.js"></script>
+    <script type="text/javascript" src="/js/carouselController.js"></script>
 
     <!-- Base Path -->
     <base href="/">
@@ -44,54 +45,8 @@
     <navigation-bar></navigation-bar>
 
     <!-- Header Carousel -->
-    <header id="myCarousel" class="carousel slide" ng-controller="CarouselController as carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" 
-                ng-repeat="slide in carousel.slides track by $index" 
-                ng-attr-data-slide-to="$index"
-                ng-class="carousel.getActive($index)">
-            </li>
-            <!-- <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li> -->
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-            <div class="item" ng-repeat="slide in carousel.slides track by $index" ng-class="carousel.getActive($index)">
-                <div class="fill" ng-style="{'background-image':'url(' + slide.imageSrc + ')'}"></div>
-                <div class="carousel-caption">
-                    <h2>{{slide.imageCaption}}</h2>
-                </div>
-            </div>
-            <!-- <div class="item active">
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>
-                <div class="carousel-caption">
-                    <h2>Caption 1</h2>
-                </div>
-            </div>
-            <div class="item">
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');"></div>
-                <div class="carousel-caption">
-                    <h2>Caption 2</h2>
-                </div>
-            </div>
-            <div class="item">
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
-                <div class="carousel-caption">
-                    <h2>Caption 3</h2>
-                </div>
-            </div> -->
-        </div>
-
-        <!-- Controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="icon-prev"></span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="icon-next"></span>
-        </a>
+    <header id="myCarousel" class="carousel slide" carousel>
+        
     </header>
 
     <!-- Page Content -->
