--- a/webpages/item.html
+++ b/webpages/item.html
@@ -64,7 +64,7 @@
                                 <h4 class="pull-right">{{item.price | currency}}</h4>
                                 <h4><a href="#">{{item.name}}</a>
                                 </h4>
-                                <p ng-bind-html="item.description"></p>
+                                <p ng-bind-html="item.fullDescription"></p>
                             </div>
                         </div>
                         <div class="row">
