--- a/webpages/merch.html
+++ b/webpages/merch.html
@@ -54,8 +54,45 @@
                 <div class="row carousel-holder">
 
                     <div class="col-md-12">
-                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                        <div id="myCarousel" class="carousel slide" data-ride="carousel" ng-controller="CarouselController as carousel">
                             <ol class="carousel-indicators">
+                                <li data-target="#myCarousel" 
+                                    ng-repeat="slide in carousel.slides track by $index" 
+                                    ng-attr-data-slide-to="$index"
+                                    ng-class="carousel.getActive($index)">
+                                </li>
+                                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                                <!-- 
+                                <li data-target="#myCarousel" data-slide-to="1"></li>
+                                <li data-target="#myCarousel" data-slide-to="2"></li> 
+                                -->
+                            </ol>
+
+                            <!-- Wrapper for slides -->
+                            <div class="carousel-inner">
+                                <div class="item" ng-repeat="slide in carousel.slides track by $index" ng-class="carousel.getActive($index)">
+                                    <!-- <div class="fill" ng-style="{'background-image':'url(' + slide.imageSrc + ')'}"></div> -->
+                                    <img ng-src="{{slide.imageSrc}}">
+                                    <div class="carousel-caption">
+                                        <h2>{{slide.imageCaption}}</h2>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                                </div>
+                            </div>
+
+                            <!-- Controls -->
+                            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                                <span class="icon-prev"></span>
+                            </a>
+                            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                                <span class="icon-next"></span>
+                            </a>
+
+
+                            
+                            <!-- <ol class="carousel-indicators">
                                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                                 <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                                 <li data-target="#carousel-example-generic" data-slide-to="2"></li>
@@ -76,7 +113,7 @@
                             </a>
                             <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
                                 <span class="glyphicon glyphicon-chevron-right"></span>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
 
