--- a/webpages/merch.html
+++ b/webpages/merch.html
@@ -71,8 +71,8 @@
                             <!-- Wrapper for slides -->
                             <div class="carousel-inner">
                                 <div class="item" ng-repeat="slide in carousel.slides track by $index" ng-class="carousel.getActive($index)">
-                                    <!-- <div class="fill" ng-style="{'background-image':'url(' + slide.imageSrc + ')'}"></div> -->
-                                    <img ng-src="{{slide.imageSrc}}">
+                                    <div class="fill" ng-style="{'background-image':'url(' + slide.imageSrc + ')'}"></div>
+                                    <!-- <img ng-src="{{slide.imageSrc}}"> -->
                                     <div class="carousel-caption">
                                         <h2>{{slide.imageCaption}}</h2>
                                     </div>
