font awesome to merch page

--- a/webpages/merch.html
+++ b/webpages/merch.html
@@ -16,6 +16,9 @@
 
     <!-- Custom CSS -->
     <link href="css/shop-homepage.css" rel="stylesheet">
+    
+    <!-- Custom Fonts -->
+    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- Angular Scripts -->
     <script type="text/JavaScript" src="/js/angular.min.js"></script>
