--- a/webpages/htmltemplates/navbar.html
+++ b/webpages/htmltemplates/navbar.html
@@ -99,7 +99,7 @@
                     <ul class="dropdown-menu">
                         <li class="dropdown-header">Welcome, <b>Person!</b></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#"><i class="fa fa-cog" aria-hidden="true"></i> Settings</a></li>
+                        <li><a href="/settings" target="_self"><i class="fa fa-cog" aria-hidden="true"></i> Settings</a></li>
                         <li><a href="#"><i class="fa fa-trophy" aria-hidden="true"></i> Upcoming Tourmanents</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="#"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></i> Cart</a></li>
